<resources>
    <string name="app_name">Ugunduzi</string>
    <string name="loginActivityTitle">Ugunduzi</string>
    <string name="userAliasLabel">Your name</string>
    <string name="userPasswordLabel">Your password</string>
    <string name="loginButtonText">START</string>
    <string name="okButtonText">OK</string>
    <string name="cancelButtonText">Cancel</string>
    <string name="emptyString"></string>
    <string name="defineServerLabel">Enter server URL</string>
    <string name="downloadDataProgressDialogTitle">Downloading</string>
    <string name="pleaseConnectMessage">Please connect to the internet</string>
    <string name="wrongPasswordLabel">Wrong password</string>
    <string name="incorrectServerURLMessage">Incorrect server URL</string>
    <string name="createNewUserLabel">Creating new user</string>
    <string name="drawNewFarmTitle">Draw new farm</string>
    <string name="defineNewFarmDialogTitle">New farm</string>
    <string name="newFarmNameLabel">Enter name of farm</string>
    <string name="enterAcresLabel">Size (acres)</string>
    <string name="defaultFarmNamePrefix">Shamba </string>
    <string name="farmNameCannotBeEmptyMessage">Farm name cannot be empty</string>
    <string name="farmSizeMustBeAboveZero">Farm size must be above zero</string>
    <string name="opAddPlot">Add plot</string>
    <string name="opSaveFarm">Save farm</string>
    <string name="opSwitchUser">Change user</string>
    <string name="farmHasNotBeenSavedMessage">This farm has not been saved. Do you really want to exit?</string>
    <string name="logoutConfirmMessage">Do you really want to log out?</string>
    <string name="yesButtonText">Yes</string>
    <string name="noButtonText">No</string>
    <string name="selectPlotMessage">You must select a plot</string>
    <string name="farmMustHavePlotMessage">Farm must have at least one plot</string>
    <string name="noSpaceForNewPlotMessage">There is no space for a new plot</string>
    <string name="opDeletePlot">Delete selected plot</string>
    <string name="deletePlotConfirmMessage">Do you really want to delete the selected plot?</string>
    <string name="opEditFarmNameSize">Edit farm name and size</string>
    <string name="enterCrop1Label">Crop one</string>
    <string name="textNone">None</string>
    <string name="enterCrop2Label">Crop two</string>
    <string name="enterTreatment1Label">Treatment one</string>
    <string name="enterTreatment2Label">Treatment two</string>
    <string name="createNewFarmLabel">Creating new farm</string>
    <string name="farmSavedMessage">Farm saved successfully</string>
    <string name="farmNameRepeated">Farm name is repeated</string>
    <string name="chooseFarmTitle">Choose a farm</string>
    <string name="farmChooserActivityTitle">Ugunduzi</string>
    <string name="opDeleteSelectedFarms">Delete selected farms</string>
    <string name="opCreateNewFarm">Create new farm</string>
    <string name="opCancelNewFarm">Cancel new farm</string>
    <string name="opGoToOtherFarm">Go to other farm</string>
    <string name="cancelNewFarmMessage">Cancel new farm?</string>
    <string name="noFarmsSelectedMessage">No farms selected</string>
    <string name="noItemsSelectedMessage">No items selected</string>
    <string name="deleteFarmConfirmMessage">Do you really want to delete the selected farms?</string>
    <string name="deleteItemsConfirmMessage">Do you really want to delete the selected items?</string>
    <string name="deletingFarmsLabel">Deleting farms</string>
    <string name="deletingFarmLabel">Deleting farm</string>
    <string name="pictureSoundButtonText">PICTURE + SOUND</string>
    <string name="financeButtonText">FINANCE</string>
    <string name="manageRecordsButton">PLOT RECORDS</string>
    <string name="plotCropLabel">Crop</string>
    <string name="plotTreatmentLabel">Treatment</string>
    <string name="previousDataItemsLabel">Previous data</string>
    <string name="dataItemLabel">Item</string>
    <string name="dateLabel">Date</string>
    <string name="enterNewDataItemButtonLabel">ENTER DATA</string>
    <string name="chooseDataItemButtonLabel">CHOOSE ITEM</string>
    <string name="valueLabel">Value</string>
    <string name="unitsLabel">Units</string>
    <string name="saveButtonText">SAVE</string>
    <string name="enterDataActivityTitle">Enter data</string>
    <string name="dataNotSavedText">Data has not been saved. Do you really want to exit?</string>
    <string name="opGoBackToFarm">Go to farm</string>
    <string name="opGoBack">Go back</string>
    <string name="enterCropLabel">Crop</string>
    <string name="enterTreatmentLabel">Treatment</string>
    <string name="valueEmptyMessage">Value cannot be empty</string>
    <string name="quantityEmptyMessage">Quantity cannot be empty</string>
    <string name="valueNegativeMessage">Value cannot be negative</string>
    <string name="mustChooseCropMessage">You must choose a crop</string>
    <string name="mustChooseTreatmentMessage">You must choose a treatment</string>
    <string name="mustChooseUnitsMessage">You must specify the units</string>
    <string name="pictureSoundActivityTitle">Picture + sound</string>
    <string name="pictureButtonLabel">Take a picture</string>
    <string name="soundButtonLabel">Record sound</string>
    <string name="opPictureSound">Picture + sound</string>
    <string name="opManagePlotRecords">Plot records</string>
    <string name="opEnterData">Enter data</string>
    <string name="pictureSoundNotSavedText">Picture and sound have not been saved. Do you really want to exit?</string>
    <string name="soundButtonRecordingLabel">Recording - press to stop</string>
    <string name="soundRecordedMessage">Sound recorded</string>
    <string name="soundButtonLabelAgain">Record sound again</string>
    <string name="pictureSoundSavedMessage">Picture and sound saved successfully</string>
    <string name="dataManagerActivity">X records</string>
    <string name="opManageFarmRecords">Farm records</string>
    <string name="farmWord">Farm</string>
    <string name="plotWord">Plot</string>
    <string name="selected">selected</string>
    <string name="opDeleteSelectedItems">Delete selected items</string>
    <string name="opSendSelectedItems">Send records</string>
    <string name="textNoCrops">No crops</string>
    <string name="downloadingParametersMessage">Downloading parameters</string>
    <string name="incorrectInternetParamsMessage">Incorrect internet parameters. Please contact the system administrator</string>
    <string name="sendingRecordsMessage">Sending records</string>
    <string name="sendingMultimediaRecordsMessage">Sending new pictures and sounds</string>
    <string name="textNoTreatments">No treatments</string>
    <string name="cropMarker">(Mbegu)</string>
    <string name="treatmentMarker">(Matibabu)</string>
    <string name="selectCropsLabel">CROPS</string>
    <string name="selectPestControlIngredients">PEST CONTROL</string>
    <string name="selectSoilManagementIngredients">SOIL MANAGEMENT</string>
    <string name="selectCropsTitle">Select crops</string>
    <string name="selectPestControlIngredientsTitle">Select pest control ingredients</string>
    <string name="selectSoilManagementIngredientsTitle">Select soil management ingredients</string>
    <string name="pestControlTitle">Pest control</string>
    <string name="soilManagementTitle">Soil management</string>
    <string name="opEditFarm">Edit farm</string>
    <string name="cropsTitle">Crops</string>
    <string name="opCancelEditing">Cancel edited farm</string>
    <string name="cancelEditedFarmMessage">Cancel edited farm?</string>
    <string name="farmEditedMessage">Farm edited successfully</string>
    <string name="updatingFarmLabel">Updating farm</string>
    <string name="opGoToCurrentState">Go to present </string>
    <string name="opDeleteFarm">Delete farm</string>
    <string name="deleteThisFarmConfirmMessage">Do you really want to delete this farm?</string>
    <string name="financeActivity">Finance</string>
    <string name="balanceWord">Balance</string>
    <string name="chooseCropButtonLabel">CHOOSE A CROP</string>
    <string name="chooseTreatmentButtonLabel">CHOOSE A TREATMENT</string>
    <string name="placeholderQuantity">Quantity</string>
    <string name="placeholderComments">Comments</string>
    <string name="opBalance">Balance</string>
    <string name="opFarmBalance">Farm balance</string>
    <string name="opUploadRecords">Upload records</string>
    <string name="sizeUnits">acres</string>
    <string name="recordsActivity">Records</string>
    <string name="totalWord">Total</string>
    <string name="treatmentIngredientsPhrase">Treatment ingredients</string>
    <string name="otherWord">Other</string>
    <string name="farmHasNoRecordsMessage">Farm has no records</string>
</resources>
