<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColor="@color/colorBlack"
        android:id="@+id/plotLabel"
        android:textSize="20dp"
        android:paddingBottom="3dp"
        android:paddingLeft="3dp"
        android:paddingTop="3dp"
        android:paddingRight="3dp"/>

    <Button
        android:id="@+id/pictureButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:onClick="startCamera"
        android:text="@string/pictureButtonLabel"
        android:textSize="20dp"
        android:background="@drawable/button_background"
        android:textColor="@color/colorWhite"/>

    <ImageView
        android:id="@+id/thumbnail"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.47"
        android:src="@drawable/blank_image"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>

    <Button
        android:id="@+id/soundButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:onClick="recordSound"
        android:text="@string/soundButtonLabel"
        android:textSize="20dp"
        android:background="@drawable/button_background"
        android:textColor="@color/colorWhite" />

    <TextView
        android:id="@+id/textSoundRecorded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/emptyString"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="3dp"/>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:onClick="saveMessage"
        android:text="@string/saveButtonText"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:visibility="invisible"
        android:background="@drawable/button_background"
        android:textColor="@color/colorWhite"/>

</LinearLayout>