<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <Button
            android:id="@+id/dataItemButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:height="32dp"
            android:background="@drawable/button_background_light"
            android:text="@string/chooseDataItemButtonLabel"
            android:textColor="@color/colorBlack"
            android:textSize="18dp" />

        <Button
            android:id="@+id/cropButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:height="32dp"
            android:background="@drawable/button_background_light"
            android:text="@string/chooseCropButtonLabel"
            android:textColor="@color/colorBlack"
            android:textSize="18dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/treatmentButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:height="32dp"
            android:background="@drawable/button_background_light"
            android:text="@string/chooseTreatmentButtonLabel"
            android:textColor="@color/colorBlack"
            android:textSize="18dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/dateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:height="32dp"
            android:background="@drawable/button_background"
            android:text="@string/emptyString"
            android:textColor="@color/colorWhite"
            android:textSize="18dp"
            android:visibility="gone" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/quantityUnitsTable"
            android:stretchColumns="*"
            android:layout_marginTop="10dp"
            android:visibility="gone">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <EditText
                    android:id="@+id/dataItemQuantity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/colorInput"
                    android:layout_marginRight="5dp"
                    android:inputType="numberDecimal"
                    android:padding="@dimen/activity_view_padding"
                    android:singleLine="true"
                    android:layout_column="0"
                    android:hint="@string/placeholderQuantity"
                    android:imeOptions="actionNext"
                    android:textColor="@color/colorBlack" />

                <Button
                    android:id="@+id/dataItemUnits"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:height="32dp"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/button_background_light"
                    android:padding="@dimen/activity_view_padding"
                    android:text="@string/emptyString"
                    android:layout_column="1"
                    android:textColor="@color/colorBlack"
                    android:textSize="18dp" />

            </TableRow>


        </TableLayout>


        <EditText
            android:id="@+id/dataItemValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorInput"
            android:ems="10"
            android:inputType="numberDecimal"
            android:padding="@dimen/activity_view_padding"
            android:singleLine="true"
            android:textColor="@color/colorBlack"
            android:imeOptions="actionNext"
            android:visibility="gone" />

        <EditText
            android:id="@+id/dataItemComments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorInput"
            android:ems="10"
            android:padding="@dimen/activity_view_padding"
            android:singleLine="true"
            android:hint="@string/placeholderComments"
            android:textColor="@color/colorBlack"
            android:imeOptions="actionDone"
            android:visibility="gone" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:text="@string/saveButtonText"
            android:textColor="@color/colorWhite"
            android:textSize="18dp"
            android:visibility="gone" />

    </LinearLayout>

</ScrollView>