<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/cropButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="40dp"
                android:background="@drawable/button_background_light"
                android:text="@string/selectCropsLabel"
                android:textColor="@color/colorBlack"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:textSize="20dp" />

            <Button
                android:id="@+id/pestControlButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:height="40dp"
                android:background="@drawable/button_background_pest_control"
                android:text="@string/selectPestControlIngredients"
                android:textColor="@color/colorBlack"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:textSize="20dp" />

            <Button
                android:id="@+id/soilManagementButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:height="40dp"
                android:background="@drawable/button_background_soil_management"
                android:text="@string/selectSoilManagementIngredients"
                android:textColor="@color/colorBlack"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:textSize="20dp" />

            <Button
                android:id="@+id/okButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:height="40dp"
                android:background="@drawable/button_background"
                android:text="@string/okButtonText"
                android:textColor="@color/colorWhite"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:textSize="20dp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>