<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newFarmNameLabel"
        android:textColor="@color/colorPrimary"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/newFarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/colorInput"
        android:imeOptions="actionNext"
        android:padding="@dimen/activity_view_padding"
        android:singleLine="true"
        android:textColor="@color/colorBlack" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/enterAcresLabel"
        android:textColor="@color/colorPrimary"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/acres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/colorInput"
        android:imeOptions="actionDone"
        android:padding="@dimen/activity_view_padding"
        android:inputType="numberDecimal"
        android:singleLine="true"
        android:textColor="@color/colorBlack" />

    <Button
        android:id="@+id/okButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:height="40dp"
        android:background="@drawable/button_background"
        android:text="@string/okButtonText"
        android:textColor="@color/colorWhite"
        android:textSize="20dp" />


</LinearLayout>