<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".login"
    android:focusableInTouchMode="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userAliasLabel"
        android:textColor="@color/colorPrimary"
        android:id="@+id/textUserAlias"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:textSize="20dp" />

    <AutoCompleteTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorInput"
        android:textColor="@color/colorBlack"
        android:padding="@dimen/activity_view_padding"
        android:id="@+id/userAlias"
        android:layout_below="@+id/textUserAlias"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_alignEnd="@+id/textUserAlias"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:completionThreshold="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userPasswordLabel"
        android:textColor="@color/colorPrimary"
        android:id="@+id/textUserPassword"
        android:layout_below="@+id/userAlias"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_alignEnd="@+id/textUserAlias"
        android:textSize="20dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:background="@color/colorInput"
        android:textColor="@color/colorBlack"
        android:padding="@dimen/activity_view_padding"
        android:ems="10"
        android:id="@+id/userPassword"
        android:layout_below="@+id/textUserPassword"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:imeOptions="actionDone"
        android:layout_alignEnd="@+id/textUserAlias" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginButtonText"
        android:onClick="validateUser"
        android:layout_below="@+id/userPassword"
        android:layout_alignParentStart="true"
        android:layout_marginTop="34dp"
        android:layout_alignEnd="@+id/userPassword"
        android:textSize="20dp"
        android:height="40dp"
        android:background="@drawable/button_background"
        android:textColor="@color/colorWhite" />


</RelativeLayout>
